
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exp-phases"
version = "0.1.2"
description = "Ittai's experiment phases (sanitized for import)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Ittai"}]
dependencies = [
  "torch>=2.1",
  "numpy>=1.26",
  "matplotlib>=3.7",
  "tqdm>=4.66",
  "ratinabox>=1.9.0"
]

[project.urls]
Homepage = "https://github.com/ittaifl/exp-phases"
